Specify scipy version for Windows issues installing seaborn.

--- a/notebooks/0-check_your_env.ipynb
+++ b/notebooks/0-check_your_env.ipynb
@@ -26,6 +26,7 @@
       "\u001b[42m[ OK ]\u001b[0m numpy\n",
       "\u001b[42m[ OK ]\u001b[0m pandas\n",
       "\u001b[42m[ OK ]\u001b[0m requests\n",
+      "\u001b[42m[ OK ]\u001b[0m scipy\n",
       "\u001b[42m[ OK ]\u001b[0m seaborn\n"
      ]
     }
