--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -10,7 +10,7 @@
     "tags": []
    },
    "source": [
-    "# Section 1: Getting Started with Pandas\n",
+    "# Section 1: Getting Started With Pandas\n",
     "\n",
     "We will begin by introducing the `Series`, `DataFrame`, and `Index` classes, which are the basic building blocks of the pandas library, and showing how to work with them. By the end of this section, you will be able to create DataFrames and perform operations on them to inspect and filter the data.\n",
     "\n",
