Fix holiday v non-holiday traveler calculation

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -4334,28 +4334,28 @@
        "      <th>2019</th>\n",
        "      <td>2.309482e+06</td>\n",
        "      <td>285061.490784</td>\n",
-       "      <td>161839.454795</td>\n",
-       "      <td>590549.037299</td>\n",
-       "      <td>2.147643e+06</td>\n",
-       "      <td>655414.644215</td>\n",
+       "      <td>2.271977e+06</td>\n",
+       "      <td>303021.675751</td>\n",
+       "      <td>2.312359e+06</td>\n",
+       "      <td>283906.226598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020</th>\n",
        "      <td>8.818674e+05</td>\n",
        "      <td>639775.194297</td>\n",
-       "      <td>61615.600000</td>\n",
-       "      <td>257142.965075</td>\n",
-       "      <td>8.202518e+05</td>\n",
-       "      <td>666744.403794</td>\n",
+       "      <td>8.649882e+05</td>\n",
+       "      <td>489938.240989</td>\n",
+       "      <td>8.831619e+05</td>\n",
+       "      <td>650399.772930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021</th>\n",
        "      <td>1.112632e+06</td>\n",
        "      <td>338040.673782</td>\n",
-       "      <td>14916.947761</td>\n",
-       "      <td>123932.066826</td>\n",
-       "      <td>1.097715e+06</td>\n",
-       "      <td>363190.998370</td>\n",
+       "      <td>9.994355e+05</td>\n",
+       "      <td>273573.249680</td>\n",
+       "      <td>1.114347e+06</td>\n",
+       "      <td>339479.298658</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4365,16 +4365,16 @@
        "         travelers                holiday_travelers                 \\\n",
        "              mean            std              mean            std   \n",
        "year                                                                 \n",
-       "2019  2.309482e+06  285061.490784     161839.454795  590549.037299   \n",
-       "2020  8.818674e+05  639775.194297      61615.600000  257142.965075   \n",
-       "2021  1.112632e+06  338040.673782      14916.947761  123932.066826   \n",
+       "2019  2.309482e+06  285061.490784      2.271977e+06  303021.675751   \n",
+       "2020  8.818674e+05  639775.194297      8.649882e+05  489938.240989   \n",
+       "2021  1.112632e+06  338040.673782      9.994355e+05  273573.249680   \n",
        "\n",
        "     non_holiday_travelers                 \n",
        "                      mean            std  \n",
        "year                                       \n",
-       "2019          2.147643e+06  655414.644215  \n",
-       "2020          8.202518e+05  666744.403794  \n",
-       "2021          1.097715e+06  363190.998370  "
+       "2019          2.312359e+06  283906.226598  \n",
+       "2020          8.831619e+05  650399.772930  \n",
+       "2021          1.114347e+06  339479.298658  "
       ]
      },
      "execution_count": 35,
@@ -4384,8 +4384,8 @@
    ],
    "source": [
     "tsa_melted_holiday_travel.assign(\n",
-    "    holiday_travelers=lambda x: ~x.holiday.isna() * x.travelers,\n",
-    "    non_holiday_travelers=lambda x: x.travelers - x.holiday_travelers\n",
+    "    holiday_travelers=lambda x: np.where(~x.holiday.isna(), x.travelers, np.nan),\n",
+    "    non_holiday_travelers=lambda x: np.where(x.holiday.isna(), x.travelers, np.nan)\n",
     ").groupby('year').agg(['mean', 'std'])"
    ]
   },
@@ -4454,22 +4454,22 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2019</th>\n",
-       "      <td>161839.454795</td>\n",
-       "      <td>590549.037299</td>\n",
+       "      <td>2.271977e+06</td>\n",
+       "      <td>303021.675751</td>\n",
        "      <td>8</td>\n",
        "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020</th>\n",
-       "      <td>61615.600000</td>\n",
-       "      <td>257142.965075</td>\n",
+       "      <td>8.649882e+05</td>\n",
+       "      <td>489938.240989</td>\n",
        "      <td>8</td>\n",
        "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021</th>\n",
-       "      <td>14916.947761</td>\n",
-       "      <td>123932.066826</td>\n",
+       "      <td>9.994355e+05</td>\n",
+       "      <td>273573.249680</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -4481,9 +4481,9 @@
        "     holiday_travelers                holiday      \n",
        "                  mean            std nunique count\n",
        "year                                               \n",
-       "2019     161839.454795  590549.037299       8    26\n",
-       "2020      61615.600000  257142.965075       8    26\n",
-       "2021      14916.947761  123932.066826       1     2"
+       "2019      2.271977e+06  303021.675751       8    26\n",
+       "2020      8.649882e+05  489938.240989       8    26\n",
+       "2021      9.994355e+05  273573.249680       1     2"
       ]
      },
      "execution_count": 36,
@@ -4493,8 +4493,8 @@
    ],
    "source": [
     "tsa_melted_holiday_travel.assign(\n",
-    "    holiday_travelers=lambda x: ~x.holiday.isna() * x.travelers,\n",
-    "    non_holiday_travelers=lambda x: x.travelers - x.holiday_travelers\n",
+    "    holiday_travelers=lambda x: np.where(~x.holiday.isna(), x.travelers, np.nan),\n",
+    "    non_holiday_travelers=lambda x: np.where(x.holiday.isna(), x.travelers, np.nan)\n",
     ").groupby('year').agg({\n",
     "    'holiday_travelers': ['mean', 'std'], \n",
     "    'holiday': ['nunique', 'count']\n",
@@ -5941,6 +5941,7 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "tsa_melted_holiday_travel.loc['2020'].assign(\n",
     "    **{\n",
     "        '14D MA': lambda x: x.rolling('14D').travelers.mean(),\n",
