Don't show hint above solution to be consistent.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -6147,7 +6147,7 @@
     "tags": []
    },
    "source": [
-    "##### 3. Update the `year` column to only contain the year, and create a new column indicating if the year is unknown. Hint: Use `year.str.slice()` to grab a substring."
+    "##### 3. Update the `year` column to only contain the year, and create a new column indicating if the year is unknown."
    ]
   },
   {
