Fix name of last section.

--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -2123,9 +2123,9 @@
     "tags": []
    },
    "source": [
-    "## Summarizing the initial data\n",
+    "## Calculating summary statistics\n",
     "\n",
-    "In the next section of this workshop, we will discuss data cleaning for a more meaningful analysis of these datasets; however, we can already extract some interesting insights from the `meteorites` data."
+    "In the next section of this workshop, we will discuss data cleaning for a more meaningful analysis of these datasets; however, we can already extract some interesting insights from the `meteorites` data by calculating summary statistics."
    ]
   },
   {
@@ -2324,7 +2324,7 @@
     }
    ],
    "source": [
-    "meteorites.iloc[meteorites['mass (g)'].idxmax()]"
+    "meteorites.loc[meteorites['mass (g)'].idxmax()]"
    ]
   },
   {
@@ -2417,7 +2417,7 @@
    },
    "source": [
     "#### Get some summary statistics on the data itself\n",
-    "We can get common summary statistics for all columns at once. By default this will only be numeric columns, but here, we will summarize everything together:"
+    "We can get common summary statistics for all columns at once. By default, this will only be numeric columns, but here, we will summarize everything together:"
    ]
   },
   {
@@ -2662,7 +2662,7 @@
     "tags": []
    },
    "source": [
-    "#### Check out the pandas documentation for more descriptive statistics:\n",
+    "#### Check out the documentation for more descriptive statistics:\n",
     "\n",
     "- [Series](https://pandas.pydata.org/docs/reference/series.html#computations-descriptive-stats)\n",
     "- [DataFrame](https://pandas.pydata.org/docs/reference/frame.html#computations-descriptive-stats)"
