--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -5695,7 +5695,7 @@
     }
    ],
    "source": [
-    "tsa_melted_holiday_travel['2019':'2021-03'].resample('Q').agg(['sum', 'mean', 'std'])"
+    "tsa_melted_holiday_travel['2019':'2021-Q1'].resample('Q').agg(['sum', 'mean', 'std'])"
    ]
   },
   {
@@ -5739,7 +5739,7 @@
     "tags": []
    },
    "source": [
-    "Performing a window calculation is very similar to a group by calculation: we first define the window, and then we specify the aggregation. Here, we use a 7-day moving window and calculate the mean of the `travelers` column:"
+    "Performing a window calculation is very similar to a group by calculation: we first define the window, and then we specify the aggregation:"
    ]
   },
   {
@@ -5985,7 +5985,7 @@
     "4. There's a data entry error in the `year` column. Can you find it? (Don't spend too much time on this.)\n",
     "5. Compare summary statistics of the `mass` column for the meteorites that were found versus observed falling.\n",
     "6. Create a pivot table that shows both the number of meteorites and the 95th percentile of meteorite mass for those that were found versus observed falling per year from 1990 to 2000 (inclusive).\n",
-    "7. Using the `taxis` data from earlier this section, resample the data to an hourly frequency based on the dropoff time. Calculate the total `trip_distance`, `fare_amount`, `tolls_amount`, `tip_amount`, then find the 5 hours with the most tips."
+    "7. Using the `taxis` data from earlier this section, resample the data to an hourly frequency based on the dropoff time. Calculate the total `trip_distance`, `fare_amount`, `tolls_amount`, and `tip_amount`, then find the 5 hours with the most tips."
    ]
   },
   {
@@ -6652,7 +6652,7 @@
     "tags": []
    },
    "source": [
-    "##### 7. Using the `taxis` data from earlier this section, resample the data to an hourly frequency based on the dropoff time. Calculate the total `trip_distance`, `fare_amount`, `tolls_amount`, `tip_amount`, then find the 5 hours with the most tips."
+    "##### 7. Using the `taxis` data from earlier this section, resample the data to an hourly frequency based on the dropoff time. Calculate the total `trip_distance`, `fare_amount`, `tolls_amount`, and `tip_amount`, then find the 5 hours with the most tips."
    ]
   },
   {
