Be more consistent when mentioning dataset.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -763,7 +763,7 @@
    "id": "837ea457-45d8-4dae-aa0e-746be381f4da",
    "metadata": {},
    "source": [
-    "*Tip: There are other ways to perform type conversion. For numeric values, we can use `pd.to_numeric()`, and we will see the `astype()` method, which is a more generic method, a little later.*"
+    "*Tip: There are other ways to perform type conversion. For numeric values, we can use the `pd.to_numeric()` function, and we will see the `astype()` method, which is a more generic method, a little later.*"
    ]
   },
   {
@@ -1564,7 +1564,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: `taxis.sort_index(axis=1)` will sort the columns by name. The `axis` parameter is present in all over the `pandas` library: `axis=0` targets rows and `axis=1` targets columns.*"
+    "*Tip: `taxis.sort_index(axis=1)` will sort the columns by name. The `axis` parameter is present throughout the `pandas` library: `axis=0` targets rows and `axis=1` targets columns.*"
    ]
   },
   {
@@ -2755,7 +2755,7 @@
    "source": [
     "### Pivoting\n",
     "\n",
-    "Using the melted data, we can pivot the data to compare traveler throughput on specific days across years:"
+    "Using the melted data, we can pivot the data to compare TSA traveler throughput on specific days across years:"
    ]
   },
   {
@@ -3105,7 +3105,7 @@
     "tags": []
    },
    "source": [
-    "Merging the holidays with the TSA throughput data will provide more context for our analysis:"
+    "Merging the holidays with the TSA traveler throughput data will provide more context for our analysis:"
    ]
   },
   {
