--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -787,7 +787,7 @@
    "id": "01779303-7f6d-49c7-8a7a-640cfdff2251",
    "metadata": {},
    "source": [
-    "*Tip: There are other ways to perform type conversion. For numeric values, we can use `pd.to_numeric()`, and we will see the `astype()` method, which is a more generic method, a little later.*"
+    "*Tip: There are other ways to perform type conversion. For numeric values, we can use the `pd.to_numeric()` function, and we will see the `astype()` method, which is a more generic method, a little later.*"
    ]
   },
   {
@@ -1607,7 +1607,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: `taxis.sort_index(axis=1)` will sort the columns by name. The `axis` parameter is present in all over the `pandas` library: `axis=0` targets rows and `axis=1` targets columns.*"
+    "*Tip: `taxis.sort_index(axis=1)` will sort the columns by name. The `axis` parameter is present throughout the `pandas` library: `axis=0` targets rows and `axis=1` targets columns.*"
    ]
   },
   {
@@ -2817,7 +2817,7 @@
    "source": [
     "### Pivoting\n",
     "\n",
-    "Using the melted data, we can pivot the data to compare traveler throughput on specific days across years:"
+    "Using the melted data, we can pivot the data to compare TSA traveler throughput on specific days across years:"
    ]
   },
   {
@@ -3167,7 +3167,7 @@
     "tags": []
    },
    "source": [
-    "Merging the holidays with the TSA throughput data will provide more context for our analysis:"
+    "Merging the holidays with the TSA traveler throughput data will provide more context for our analysis:"
    ]
   },
   {
