Fix typos and make calls to sns.heatmap more consistent.

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -333,7 +333,7 @@
     "tags": []
    },
    "source": [
-    "Let's compare the distributions of daily TSA traveler throughput across years:"
+    "Let's compare the distribution of daily TSA traveler throughput across years:"
    ]
   },
   {
@@ -378,7 +378,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: While `pandas` let's us specify that we want subplots and their layout (with the `subplots` and `layout` parameters, respectively), this gives us additional flexibility.*"
+    "*Tip: While `pandas` lets us specify that we want subplots and their layout (with the `subplots` and `layout` parameters, respectively), this gives us additional flexibility.*"
    ]
   },
   {
@@ -493,7 +493,7 @@
     "data = tsa_melted_holiday_travel['2019':'2021-04'].assign(month=lambda x: x.index.month)\\\n",
     "    .pivot_table(index='month', columns='year', values='travelers', aggfunc='sum')\n",
     "\n",
-    "ax = sns.heatmap(data / 1e6, cmap='Blues', annot=True, fmt='.1f')\n",
+    "ax = sns.heatmap(data=data / 1e6, cmap='Blues', annot=True, fmt='.1f')\n",
     "ax.set_yticklabels(calendar.month_abbr[1:], rotation=0)\n",
     "ax.set_title('Total TSA Traveler Throughput (in millions)')"
    ]
