Reformatting important notes section.

--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -44,7 +44,7 @@
     "tags": []
    },
    "source": [
-    "#### Important Notes\n",
+    "#### Important notes:\n",
     "- Time of submission will be used to break ties.\n",
     "- You don't have to answer all the questions to submit.\n",
     "- There are likely more questions than you will have time to answer, so be sure to submit before the session ends."
