Update slide with plt and Axes notes.

--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -710,7 +710,7 @@
    },
    "source": [
     "Some things to keep in mind: \n",
-    "- Throughout this section we used `plt` functions to customize our plots, but `Axes` objects have equivalent methods for adding shaded regions, reference lines, annotations, etc. &ndash; although the names might be slightly different (e.g. `Axes.set_xlabel()` vs. `plt.xlabel()`). \n",
+    "- We used `plt` functions to customize our plots, but `Axes` objects have equivalent methods for adding shaded regions, reference lines, annotations, etc. &ndash; although the method names might be slightly different than their `plt` function counterparts (e.g. `Axes.set_xlabel()` vs. `plt.xlabel()`). \n",
     "- Likewise, `plt` functions can be used to add plot titles and axis labels, with the important caveat that  `Axes` methods should always be used instead when dealing with subplots &ndash; otherwise, the action will only affect the last subplot."
    ]
   },
