Show full transpose result.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -3040,6 +3040,36 @@
        "      <td>2198517.0</td>\n",
        "      <td>1168734.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2156262.0</td>\n",
+       "      <td>1844811.0</td>\n",
+       "      <td>992406.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2485430.0</td>\n",
+       "      <td>2119867.0</td>\n",
+       "      <td>1278557.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2378673.0</td>\n",
+       "      <td>1909363.0</td>\n",
+       "      <td>1119303.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2122898.0</td>\n",
+       "      <td>1617220.0</td>\n",
+       "      <td>825745.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2187298.0</td>\n",
+       "      <td>1702686.0</td>\n",
+       "      <td>974221.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -3051,7 +3081,12 @@
        "2             1979558.0  1736393.0   744812.0\n",
        "3             2143619.0  1877401.0   826924.0\n",
        "4             2402692.0  2130015.0  1107534.0\n",
-       "5             2543689.0  2198517.0  1168734.0"
+       "5             2543689.0  2198517.0  1168734.0\n",
+       "6             2156262.0  1844811.0   992406.0\n",
+       "7             2485430.0  2119867.0  1278557.0\n",
+       "8             2378673.0  1909363.0  1119303.0\n",
+       "9             2122898.0  1617220.0   825745.0\n",
+       "10            2187298.0  1702686.0   974221.0"
       ]
      },
      "execution_count": 23,
@@ -3060,7 +3095,7 @@
     }
    ],
    "source": [
-    "tsa_pivoted.T.head()"
+    "tsa_pivoted.T"
    ]
   },
   {
