Change caption and picture.

--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -15,8 +15,8 @@
     "The human brain excels at finding patterns in visual representations of the data; so in this section, we will learn how to visualize data using `pandas` along with the `matplotlib` and `seaborn` libraries for additional features. We will create a variety of visualizations that will help us better understand our data.\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "<img width=\"350\" src=\"https://i.pinimg.com/originals/b4/af/50/b4af50a72edcc64e071c38981a630e83.jpg\" alt=\"Panda hug\"/>\n",
-    "<div><small><em>From left to right: seaborn, matplotlib, and pandas. <a href=\"https://www.pinterest.com/pin/469641067369290673/\">Source</a></em></small></div>\n",
+    "<img width=\"300\" src=\"https://data.whicdn.com/images/186942641/original.jpg\" alt=\"Panda hug\"/>\n",
+    "<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. <a href=\"https://weheartit.com/entry/186942641\">Source</a></em></small></div>\n",
     "</div>"
    ]
   },
