--- a/notebooks/4-hands_on_data_analysis_lab.ipynb
+++ b/notebooks/4-hands_on_data_analysis_lab.ipynb
@@ -19,15 +19,12 @@
     "\n",
     "## Live Session\n",
     "\n",
-    "The 10 individuals with the highest scores will also win a copy of [Hands-On Data Analysis with Pandas – Second Edition](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (live session only).\n",
-    "\n",
     "### Lab Tasks\n",
     "\n",
-    "[This](https://forms.gle/wnyDZwCjgvn9fuHK9) Google form contains all the tasks for this lab. You can submit as many times as you wish, and you will be able to see which questions you got wrong (if any). The email addresses provided will be used to contact the winners. After the winners have been notified, all response data will be purged.\n",
+    "[This](https://forms.gle/wnyDZwCjgvn9fuHK9) Google form contains all the tasks for this lab. You can submit as many times as you wish, and you will be able to see which questions you got wrong (if any).\n",
     "\n",
     "#### Important notes:\n",
     "- The Google form will open when we arrive to this section of the training.\n",
-    "- Time of submission will be used to break ties.\n",
     "- You don't have to answer all the questions to submit.\n",
     "- There are likely more questions than you will have time to answer, so be sure to submit before the session ends."
    ]
