--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "# Section 4: Hands-On Data Analysis Lab\n",
     "\n",
-    "We will practice all that you’ve learned in a hands-on lab. This section features a set of analysis tasks that provide opportunities to apply the material from the previous sections. The 10 individuals with the highest scores will also win a copy of [Hands-On Data Analysis with Pandas – Second Edition](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (live session only).\n",
+    "We will practice all that you’ve learned in a hands-on lab. This section features a set of analysis tasks that provide opportunities to apply the material from the previous sections.\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "<img width=\"200\" src=\"https://www.pngkey.com/png/detail/102-1027124_animals-pandas-panda-transparent-background.png\" alt=\"Animals - Pandas - Panda Transparent Background@pngkey.com\">\n",
@@ -31,7 +31,7 @@
    "source": [
     "## Lab Tasks\n",
     "\n",
-    "[This](https://forms.gle/wnyDZwCjgvn9fuHK9) Google form contains all the tasks for this lab. You can submit as many times as you wish, and you will be able to see which questions you got wrong (if any). The email addresses provided will be used to contact the winners. After the winners have been notified, all response data will be purged."
+    "[This](https://forms.gle/wnyDZwCjgvn9fuHK9) Google form contains all the tasks for this lab. You can submit as many times as you wish, and you will be able to see which questions you got wrong (if any)."
    ]
   },
   {
@@ -45,7 +45,6 @@
    },
    "source": [
     "#### Important notes:\n",
-    "- Time of submission will be used to break ties.\n",
     "- You don't have to answer all the questions to submit.\n",
     "- There are likely more questions than you will have time to answer, so be sure to submit before the session ends."
    ]
