--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "- data scientist and software engineer at Bloomberg in New York City\n",
     "- working in information security\n",
-    "- author of [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (currently on in its second edition)\n",
+    "- author of [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (currently in its second edition)\n",
     "- BS in operations research from Columbia University\n",
     "- currently pursuing MS in computer science (ML specialization) from Georgia Tech"
    ]
