--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -1559,7 +1559,7 @@
     "tags": []
    },
    "source": [
-    "Here's an example of a Boolean mask for meteorites weighing more than 50 grams that was found on Earth (i.e. they were not observed falling):"
+    "Here's an example of a Boolean mask for meteorites weighing more than 50 grams that were found on Earth (i.e., they were not observed falling):"
    ]
   },
   {
