--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -387,7 +387,7 @@
     "    plot_data.plot(kind='kde', legend=False, color='blue', ax=ax)\n",
     "    ax.set(title=f'{year} TSA Traveler Throughput', xlabel='travelers')\n",
     "\n",
-    "plt.tight_layout() # handle overlaps"
+    "fig.tight_layout() # handle overlaps"
    ]
   },
   {
