--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -3106,6 +3106,18 @@
        "      <th>2019-11-28</th>\n",
        "      <td>Thanksgiving</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-24</th>\n",
+       "      <td>Christmas Eve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-25</th>\n",
+       "      <td>Christmas Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>New Year's Eve</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -3117,7 +3129,10 @@
        "2019-05-27    Memorial Day\n",
        "2019-07-04        July 4th\n",
        "2019-09-02       Labor Day\n",
-       "2019-11-28    Thanksgiving"
+       "2019-11-28    Thanksgiving\n",
+       "2019-12-24   Christmas Eve\n",
+       "2019-12-25   Christmas Day\n",
+       "2019-12-31  New Year's Eve"
       ]
      },
      "execution_count": 24,
@@ -3127,7 +3142,7 @@
    ],
    "source": [
     "holidays = pd.read_csv('../data/holidays.csv', parse_dates=True, index_col='date')\n",
-    "holidays.head()"
+    "holidays.loc['2019']"
    ]
   },
   {
