--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -365,7 +365,7 @@
     "    plot_data.plot(kind='kde', legend=False, color='blue', ax=ax)\n",
     "    ax.set(title=f'{year} TSA Traveler Throughput', xlabel='travelers')\n",
     "\n",
-    "plt.tight_layout() # handle overlaps"
+    "fig.tight_layout() # handle overlaps"
    ]
   },
   {
@@ -420,7 +420,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x783ab75e4358>"
+       "<seaborn.axisgrid.FacetGrid at 0x7c13f1565320>"
       ]
      },
      "execution_count": 7,
