Update async lab questions.

--- a/asynchronous_lab/asynchronous_lab.ipynb
+++ b/asynchronous_lab/asynchronous_lab.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "### About the Data\n",
     "\n",
-    "We will be using 2019 flight statistics from the United States Department of Transportation’s Bureau of Transportation Statistics (available [here](https://www.transtats.bts.gov/DL_SelectFields.asp?gnoyr_VQ=FMF&QO_fu146_anzr=Nv4%20Pn44vr45) and in this repository as `data/T100_MARKET_ALL_CARRIER.zip`). It contains 321,409 rows and 41 columns. Note that you don't need to unzip the file to read it in with `pd.read_csv()`.\n",
+    "We will be using 2019 flight statistics from the United States Department of Transportation’s Bureau of Transportation Statistics (available [here](https://www.transtats.bts.gov/DL_SelectFields.asp?gnoyr_VQ=FMF&QO_fu146_anzr=Nv4%20Pn44vr45) and in this repository as `data/T100_MARKET_ALL_CARRIER.zip`). Each row contains information about a specific route for a given carrier in a given month (e.g., JFK &rarr; LAX on Delta Airlines in January). There are 321,409 rows and 41 columns. Note that you don't need to unzip the file to read it in with `pd.read_csv()`.\n",
     "\n",
     "#### Exercises\n",
     "\n",
@@ -70,7 +70,7 @@
    "id": "2f4cf587-5c27-49e4-b207-c88246fa407b",
    "metadata": {},
    "source": [
-    "##### 4. Calculate the totals of the `distance`, `freight`, `mail`, and `passengers` columns for flights from the United Kingdom to the United States."
+    "##### 4. Calculate the totals of the `freight`, `mail`, and `passengers` columns for flights from the United Kingdom to the United States."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "id": "8646906c-90f1-492f-b7d1-ec8d9d5d2c4e",
    "metadata": {},
    "source": [
-    "##### 5. Find the top 5 carriers for distance traveled."
+    "##### 5. Find the top 5 carriers for median route distance (i.e., for all origin-destination pairs that each carrier has, find the median distance after removing duplicates)."
    ]
   },
   {
@@ -102,7 +102,7 @@
    "id": "14df568e-e9c5-4ff4-9ba2-5afb9e813846",
    "metadata": {},
    "source": [
-    "##### 6. Find the total cargo transported (mail + freight) and distance traveled for the 10 carriers that transported the most cargo."
+    "##### 6. Find the total cargo transported (mail + freight) and mean distance traveled for the 10 carriers that transported the most cargo."
    ]
   },
   {
