--- a/asynchronous_lab/solutions.ipynb
+++ b/asynchronous_lab/solutions.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "### About the Data\n",
     "\n",
-    "We will be using 2019 flight statistics from the United States Department of Transportation’s Bureau of Transportation Statistics (available [here](https://www.transtats.bts.gov/DL_SelectFields.asp?gnoyr_VQ=FMF&QO_fu146_anzr=Nv4%20Pn44vr45) and in this repository as `data/T100_MARKET_ALL_CARRIER.zip`). It contains 321,409 rows and 41 columns. Note that you don't need to unzip the file to read it in with `pd.read_csv()`.\n",
+    "We will be using 2019 flight statistics from the United States Department of Transportation’s Bureau of Transportation Statistics (available [here](https://www.transtats.bts.gov/DL_SelectFields.asp?gnoyr_VQ=FMF&QO_fu146_anzr=Nv4%20Pn44vr45) and in this repository as `data/T100_MARKET_ALL_CARRIER.zip`). Each row contains information about a specific route for a given carrier in a given month (e.g., JFK &rarr; LAX on Delta Airlines in January). There are 321,409 rows and 41 columns. Note that you don't need to unzip the file to read it in with `pd.read_csv()`.\n",
     "\n",
     "### Solutions\n",
     "\n",
@@ -312,7 +312,7 @@
    "id": "2f4cf587-5c27-49e4-b207-c88246fa407b",
    "metadata": {},
    "source": [
-    "##### 4. Calculate the totals of the `distance`, `freight`, `mail`, and `passengers` columns for flights from the United Kingdom to the United States."
+    "##### 4. Calculate the totals of the `freight`, `mail`, and `passengers` columns for flights from the United Kingdom to the United States."
    ]
   },
   {
@@ -324,7 +324,6 @@
     {
      "data": {
       "text/plain": [
-       "distance        6478403.0\n",
        "freight       903296879.0\n",
        "mail           29838395.0\n",
        "passengers     10685608.0\n",
@@ -339,7 +338,7 @@
    "source": [
     "df.query(\n",
     "    'origin_country_name == \"United Kingdom\" and dest_country_name == \"United States\"'\n",
-    ")[['distance', 'freight', 'mail', 'passengers']].sum()"
+    ")[['freight', 'mail', 'passengers']].sum()"
    ]
   },
   {
@@ -347,7 +346,7 @@
    "id": "8646906c-90f1-492f-b7d1-ec8d9d5d2c4e",
    "metadata": {},
    "source": [
-    "##### 5. Find the top 5 carriers for distance traveled."
+    "##### 5. Find the top 5 carriers for median route distance (i.e., for all origin-destination pairs that each carrier has, find the median distance after removing duplicates)."
    ]
   },
   {
@@ -360,11 +359,11 @@
      "data": {
       "text/plain": [
        "unique_carrier_name\n",
-       "Southwest Airlines Co.         47564700.0\n",
-       "United Air Lines Inc.          36240281.0\n",
-       "Delta Air Lines Inc.           29549296.0\n",
-       "American Airlines Inc.         22637963.0\n",
-       "Federal Express Corporation    14421870.0\n",
+       "Singapore Airlines Ltd.                                       8068.0\n",
+       "Cathay Pacific Airways Ltd.                                   8020.0\n",
+       "Qantas Airways Ltd.                                           7886.0\n",
+       "Longtail Aviation Ltd.                                        7855.5\n",
+       "National Aviation Company of India Limited d/b/a Air India    7798.0\n",
        "Name: distance, dtype: float64"
       ]
      },
@@ -374,7 +373,8 @@
     }
    ],
    "source": [
-    "df.groupby('unique_carrier_name').distance.sum().nlargest(5)"
+    "df[['unique_carrier_name', 'origin', 'dest', 'distance']].drop_duplicates()\\\n",
+    "    .groupby('unique_carrier_name').distance.median().nlargest(5)"
    ]
   },
   {
@@ -382,7 +382,7 @@
    "id": "14df568e-e9c5-4ff4-9ba2-5afb9e813846",
    "metadata": {},
    "source": [
-    "##### 6. Find the total cargo transported (mail + freight) and distance traveled for the 10 carriers that transported the most cargo."
+    "##### 6. Find the total cargo transported (mail + freight) and mean distance traveled for the 10 carriers that transported the most cargo."
    ]
   },
   {
@@ -425,70 +425,70 @@
        "    <tr>\n",
        "      <th>Federal Express Corporation</th>\n",
        "      <td>1.270966e+10</td>\n",
-       "      <td>14421870.0</td>\n",
+       "      <td>1121.887981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>United Parcel Service</th>\n",
        "      <td>9.173867e+09</td>\n",
-       "      <td>7317739.0</td>\n",
+       "      <td>1030.812650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Atlas Air Inc.</th>\n",
        "      <td>3.356847e+09</td>\n",
-       "      <td>6535594.0</td>\n",
+       "      <td>1900.987202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>United Air Lines Inc.</th>\n",
        "      <td>1.577892e+09</td>\n",
-       "      <td>36240281.0</td>\n",
+       "      <td>1810.656058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>American Airlines Inc.</th>\n",
        "      <td>1.353074e+09</td>\n",
-       "      <td>22637963.0</td>\n",
+       "      <td>1583.185048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Kalitta Air LLC</th>\n",
        "      <td>1.272180e+09</td>\n",
-       "      <td>3230102.0</td>\n",
+       "      <td>2519.580343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Polar Air Cargo Airways</th>\n",
        "      <td>1.199386e+09</td>\n",
-       "      <td>1481214.0</td>\n",
+       "      <td>3111.794118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Delta Air Lines Inc.</th>\n",
        "      <td>1.129524e+09</td>\n",
-       "      <td>29549296.0</td>\n",
+       "      <td>1612.688752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>China Airlines Ltd.</th>\n",
        "      <td>8.370799e+08</td>\n",
-       "      <td>1258908.0</td>\n",
+       "      <td>5828.277778</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cathay Pacific Airways Ltd.</th>\n",
        "      <td>7.741777e+08</td>\n",
-       "      <td>3216936.0</td>\n",
+       "      <td>7498.685315</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    cargo    distance\n",
-       "unique_carrier_name                                  \n",
-       "Federal Express Corporation  1.270966e+10  14421870.0\n",
-       "United Parcel Service        9.173867e+09   7317739.0\n",
-       "Atlas Air Inc.               3.356847e+09   6535594.0\n",
-       "United Air Lines Inc.        1.577892e+09  36240281.0\n",
-       "American Airlines Inc.       1.353074e+09  22637963.0\n",
-       "Kalitta Air LLC              1.272180e+09   3230102.0\n",
-       "Polar Air Cargo Airways      1.199386e+09   1481214.0\n",
-       "Delta Air Lines Inc.         1.129524e+09  29549296.0\n",
-       "China Airlines Ltd.          8.370799e+08   1258908.0\n",
-       "Cathay Pacific Airways Ltd.  7.741777e+08   3216936.0"
+       "                                    cargo     distance\n",
+       "unique_carrier_name                                   \n",
+       "Federal Express Corporation  1.270966e+10  1121.887981\n",
+       "United Parcel Service        9.173867e+09  1030.812650\n",
+       "Atlas Air Inc.               3.356847e+09  1900.987202\n",
+       "United Air Lines Inc.        1.577892e+09  1810.656058\n",
+       "American Airlines Inc.       1.353074e+09  1583.185048\n",
+       "Kalitta Air LLC              1.272180e+09  2519.580343\n",
+       "Polar Air Cargo Airways      1.199386e+09  3111.794118\n",
+       "Delta Air Lines Inc.         1.129524e+09  1612.688752\n",
+       "China Airlines Ltd.          8.370799e+08  5828.277778\n",
+       "Cathay Pacific Airways Ltd.  7.741777e+08  7498.685315"
       ]
      },
      "execution_count": 6,
@@ -497,7 +497,9 @@
     }
    ],
    "source": [
-    "df.assign(cargo=lambda x: x.mail + x.freight).groupby('unique_carrier_name')[['cargo', 'distance']].sum().nlargest(10, 'cargo')"
+    "df.assign(cargo=lambda x: x.mail + x.freight)\\\n",
+    "    .groupby('unique_carrier_name')[['cargo', 'distance']]\\\n",
+    "    .agg(dict(cargo='sum', distance='mean')).nlargest(10, 'cargo')"
    ]
   },
   {
