Add links to data viz workshop.

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -660,6 +660,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c31d1d88-a831-42f6-a258-9bcdfe2850a8",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "For more on data visualization in Python, including animations and interactive plots, check out the [Beyond the Basics: Data Visualization in Python](https://github.com/stefmolin/python-data-viz-workshop) workshop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "157ec3f9-1196-4a66-9415-499166ccbeeb",
    "metadata": {
     "slideshow": {
