--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "<div style=\"text-align: center;\">\n",
     "<img width=\"300\" src=\"https://data.whicdn.com/images/186942641/original.jpg\" alt=\"Panda hug\"/>\n",
-    "<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. <a href=\"https://weheartit.com/entry/186942641\">Source</a></em></small></div>\n",
+    "<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. (<a href=\"https://weheartit.com/entry/186942641\">source</a>)</em></small></div>\n",
     "</div>"
    ]
   },
@@ -712,6 +712,19 @@
     "Some things to keep in mind: \n",
     "- We used `plt` functions to customize our plots, but `Axes` objects have equivalent methods for adding shaded regions, reference lines, annotations, etc. &ndash; although the method names might be slightly different than their `plt` function counterparts (e.g. `Axes.set_xlabel()` vs. `plt.xlabel()`). \n",
     "- Likewise, `plt` functions can be used to add plot titles and axis labels, with the important caveat that  `Axes` methods should always be used instead when dealing with subplots &ndash; otherwise, the action will only affect the last subplot."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e0a76c2-98fb-48fa-ab81-dcd1d5815344",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "For more on data visualization in Python, including animations and interactive plots, check out the [Beyond the Basics: Data Visualization in Python](https://github.com/stefmolin/python-data-viz-workshop) workshop."
    ]
   },
   {
