--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "## Let's get started\n",
     "\n",
-    "*Be sure to follow along in the notebooks.*\n",
+    "*Be sure to follow along in the [notebooks](https://github.com/stefmolin/pandas-workshop/tree/master/notebooks).*\n",
     "\n",
     "<img width=\"300\" src=\"https://www.pngkey.com/png/detail/42-428839_silhouette-face-bamboo-cartoon-wild-bear-cute-panda.png\" alt=\"Silhouette, Face, Bamboo, Cartoon, Wild, Bear, Cute - Panda Black And White@pngkey.com\">"
    ]
